# browser.html

./: .flowconfig  .gitignore  Cargo.toml  LICENSE  README.md  browser.js  build.rs  gulpfile.babel.js  main.js  npm-shrinkwrap.json  package.json
apps/browser/: index.html
apps/browser/css/: layout.css  navbar.css  popup.css
apps/browser/js/: navbar.js  popup.js  tabiframe.js  tabiframedeck.js  tabstrip.js
css/: navbar.css  theme.css
runtime/: shell.css  shell.xul
src/: Devtools.js  browser.js  browser.js.flow  devtools.js  main.js  perspective-ui.js
src/Browser/: Navigators.js
src/Common/: Animation.js  Keyboard.js  URL.js  URLHelper.js
src/Devtools/: Log.js  Record.js  Replay.js
src/Lang/: Task.js
src/Service/: History.js  Search.js
src/UI/: Button.js  ToggleButton.js
src/browser/: Navigators.js  Sidebar.js  actions.js  assistant.js  browser.js  deck.js  index.js  input.js  navigator-deck.js  overlay.js  perspective-ui.js  shell.js  sidebar.js  synthesis-ui.js  updater.js  web-view.js  web-views.js  web-views.js.flow  window-bar.js
src/common/: Animation.js  Console.js  Deck.js  IO.js  animation.js  array.js  array.js.flow  button.js  cursor.js  devtools.js  favicon.js  focusable.js  history.js  history.js.flow  image.js  keyboard.js  lens.js  match.js  match.js.flow  prelude.js  request-animation-frame.js  result.js.flow  runtime.js  style.js  text-input.js  toggle.js  url-helper.js
src/devtools/: Debug.js  Record.js  log.js  monitor.js  record.js  replay.js
src/worker/: history.js
type/browser/: assistant.js
type/devtools/: monitor.js
(+122 files in other folders)
